# RustBattlesnake

./: Cargo.toml
src/: logic.rs  main.rs
