[package]
authors = ["Cameron Bierer"]
name = "rust_snake"
version = "0.0.1"
edition = "2021"

homepage = "https://play.battlesnake.com"
repository = ""

readme = "README.md"
keywords = ["battlesnake"]
description = """
A simple Battlesnake written in Rust
"""

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
log = "0.4.0"
env_logger = "0.9.0"
rand = "0.8.4"